fix #126 java 21 compatibility